# LLM_RAG_V2

./: .gitignore  API_CONTRACT.md  CODE_REVIEW_SUMMARY.md  PROJECT_PLAN.md  README.md  REVIEW_SUMMARY_TH.md  TASK_ASSIGNMENT.md  docker-compose.yml  package-lock.json  test_review_endpoints.py
backend/: .dockerignore  .env.example  Dockerfile  HOW_TO_USE.md  README.md  main.py  pyproject.toml  requirements.txt  start_server.bat  start_server.ps1  start_server.sh  test_register_manual.py  test_supabase_register.py
backend/app/: config.py  database.py  dependencies.py  main.py  main_test.py  schemas.py
backend/app/api/v1/: admin.py  auth.py  documents.py  exams.py  grading.py  review.py
backend/app/core/: exceptions.py  security.py
backend/app/schemas/: __init__.py  auth.py  document.py  documents.py  enums.py  exam.py  exams.py  grading.py  review.py  submission.py
backend/app/services/: __init__.py  auth_service.py  embedding_service.py  grading_service.py  pdf_service.py  rag_service.py
backend/poc/: test_embedding.py  test_grading.py
backend/prisma/: dev.db  schema.prisma
backend/supabase/: schema.sql
backend/tests/: conftest.py  test_admin.py  test_embedding_service.py  test_exam_crud.py  test_export.py  test_grading_pipeline_integration.py  test_integration_api.py  test_pdf_service.py  test_rag_service.py  test_review.py  test_submission.py
frontend/: middleware.ts  package-lock.json  package.json
frontend/app/: Login.tsx  layout.tsx
frontend/app/dashboard/: loading.tsx  page.tsx
frontend/src/components/: PdfPreview.tsx  ProtectedRoute.tsx  (+1 more)
(+16 files in other folders)
